# genesis-engine

./: .gitignore  CONTRIBUTING-AI.md  Cargo.toml  LICENSE.md  README.md  clippy.toml
.cursor/rules/: project.mdc
bench_results/: subdiv8_after.txt  subdiv8_after_run.txt  subdiv8_baseline.txt
crates/genesis_app/: Cargo.toml
crates/genesis_app/src/: history.rs  main.rs
crates/genesis_biology/: Cargo.toml
crates/genesis_biology/src/: biogenesis.rs  biome.rs  core_graph.rs  events.rs  evolution.rs  guild.rs  layer.rs  ledger.rs  lib.rs  microbial.rs  morphospace.rs  naming.rs  population.rs  province.rs  richness.rs  speciation.rs  state.rs  trait_data.rs  view.rs
crates/genesis_biology/src/data/: core_traits.json  naming.json
crates/genesis_civilization/: Cargo.toml
crates/genesis_civilization/src/: lib.rs
crates/genesis_climate/: Cargo.toml
crates/genesis_climate/src/: carbon.rs  circulation.rs  events.rs  formation.rs  glaciation.rs  hydro_mask.rs  layer.rs  lib.rs  ocean_basins.rs  ocean_currents.rs  ocean_distance.rs  precipitation.rs  regimes.rs  state.rs  temperature.rs  wind.rs
crates/genesis_core/: Cargo.toml
crates/genesis_core/src/: biology_view.rs  lib.rs  parallel.rs  world.rs
crates/genesis_core/src/branches/: mod.rs
crates/genesis_core/src/data/: climate_placeholder.rs  enums.rs  hydrology.rs  ids.rs  mod.rs
crates/genesis_core/src/events/: kinds.rs  mod.rs
crates/genesis_core/src/grid/: error.rs  geography.rs  ids.rs  isea3h.rs  mod.rs  neighbors.rs
crates/genesis_core/src/interventions/: actions.rs  mod.rs
crates/genesis_core/src/lifecycle/: error.rs  mod.rs  progress.rs
crates/genesis_core/src/parameters/: core.rs  extensions.rs  mod.rs  serialization.rs  validation.rs
crates/genesis_core/src/persistence/: error.rs  logs.rs  mod.rs  recipe.rs  snapshots.rs  tree.rs
crates/genesis_core/src/rng/: mod.rs
crates/genesis_core/src/time/: mod.rs  ticks.rs
crates/genesis_export/: Cargo.toml
crates/genesis_export/src/: lib.rs
crates/genesis_hydrology/: Cargo.toml
crates/genesis_hydrology/src/: budget.rs  coastal.rs  erosion.rs  events.rs  flow.rs  groundwater.rs  ice.rs  lakes.rs  layer.rs  lib.rs  partition.rs  regime.rs  rivers.rs  routing.rs  soil.rs  solve.rs  state.rs  validation.rs
crates/genesis_mods/: Cargo.toml
crates/genesis_mods/src/: lib.rs
crates/genesis_render/: Cargo.toml
crates/genesis_render/src/: color.rs  lib.rs  outline.rs  pick.rs  plugin.rs  polygon.rs  projection.rs  render_mode.rs  resources.rs  rivers.rs  systems.rs
crates/genesis_rules/: Cargo.toml
crates/genesis_rules/src/: engine.rs  lib.rs  model.rs
crates/genesis_tech/: Cargo.toml
crates/genesis_tech/src/: lib.rs
crates/genesis_tectonics/: Cargo.toml
crates/genesis_tectonics/src/: accretion.rs  advection.rs  basin_infill.rs  boundary.rs  boundary_events.rs  calibration.rs  coast_cleanup.rs  collapse.rs  collision_jam.rs  continental_heal.rs  diagnostics.rs  elevation.rs  epeirogeny.rs  erosion.rs  events.rs  frames.rs  history.rs  hotspots.rs  initial_generation.rs  initial_terrain.rs  layer.rs  lib.rs  motion.rs  partition.rs  plate.rs  plate_surface.rs  projection.rs  reorganization.rs  sea_level.rs  surface_remap.rs  validation.rs  volcanism.rs  world_rebuild.rs
crates/genesis_ui/: Cargo.toml
crates/genesis_ui/src/: biology_view.rs  hex_inspect.rs  hydro_validation.rs  lib.rs  smoke.rs  ui.rs  worldgen.rs
docs/: 00-prompt-template.md  01-vision-and-scope.md  02-architecture-overview.md  03-glossary-and-naming.md  04-data-layer-specification.md  05-tick-system-and-time-management.md  06-REVIEW.md  06-tectonics-module-specification.md  06-terrain-calibration-specification.md  07-climate-module-specification.md  08-hydrology-module-specification.md  09-biology-foundation-plan.md  09-biology-module-specification.md  09B-hex-state-inputs-for-biology.md  09B-implementation-plan.md  10-civilization-module-specification.md  10-terrain-calibration-specification.md  11-rule-engine-specification.md  prep-09-viewing-shell-specification.md
