[package]
name = "genesis_biology"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies]
genesis_core = { path = "../genesis_core" }
genesis_rules = { path = "../genesis_rules" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1" }
