[package]
name = "genesis_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
