[package]
name = "genesis_tectonics"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
genesis_core = { path = "../genesis_core" }
glam = "0.30"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
