[package]
name = "genesis_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies]
bevy = { workspace = true }
genesis_climate = { path = "../genesis_climate" }
genesis_core = { path = "../genesis_core" }
genesis_hydrology = { path = "../genesis_hydrology" }
genesis_render = { path = "../genesis_render" }
genesis_tectonics = { path = "../genesis_tectonics" }
