[package]
name = "genesis_ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies]
arboard = { version = "3", default-features = false }
bevy = { workspace = true }
genesis_biology = { path = "../genesis_biology" }
genesis_climate = { path = "../genesis_climate" }
genesis_core = { path = "../genesis_core" }
genesis_hydrology = { path = "../genesis_hydrology" }
genesis_render = { path = "../genesis_render" }
genesis_tectonics = { path = "../genesis_tectonics" }
